k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personal-dashboard
  labels:
    name: personal-dashboard
